# solana-custody-backend

./: .gitignore  Cargo.toml  config.yaml
migrations/: create_users_wallets.sql
server/api/: Cargo.toml
server/api/src/admin/: mod.rs  sys_user_api.rs
server/core/: Cargo.toml
server/core/src/web/: page.rs
server/initialize/: Cargo.toml
server/initialize/src/: db_initialization.rs  router_initialization.rs
server/model/: Cargo.toml
server/model/src/admin/entities/: casbin_rule.rs  sea_orm_active_enums.rs
server/model/src/admin/input/: sys_access_key.rs  sys_authentication.rs  sys_menu.rs
server/model/src/admin/output/: sys_authentication.rs  sys_menu.rs
server/resources/: application-test.yaml
server/router/: Cargo.toml
server/service/src/helper/: mongo_helper.rs
sol-spl-token/: Cargo.toml  test_integration.rs
sol-spl-token/examples/: basic_usage.rs
sol-spl-token/src/: config.rs  error.rs  lib.rs  swap.rs  token.rs  wallet.rs
src/: config.rs  main.rs
