[package]
name = "solana-app-wallet"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.7", features = ["json", "tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
uuid = { version = "1.19.0", features = ["v4"] }
chrono = { version = "0.4.42", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
clap = { version = "4.0", features = ["derive"] }
config = "0.15.19"
aes-gcm = "0.10"
rand = "0.9.2"
base64 = "0.22"
hex = "0.4.3"
once_cell = "1.21.3"
# Solana
solana-sdk = "3.0.0"
solana-client = "3.0.0"
spl-token = { version = "9.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "8.0.0", features = ["no-entrypoint"] }
bs58 = "0.5.1"
solana-program-runtime = { version = "3.0.0" }
solana-program = { version = "3.0.0" }
solana-system-interface = "3.0.0"
solana-commitment-config = "3.0.0"
spl-token-interface = "2.0.0"
spl-associated-token-account-interface={version="2.0.0"}
spl-token-2022-interface={version="2.1.0"}
spl-token-group-interface={version="0.7.1"}
solana-transaction-status-client-types = "3.0.12"

opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry = {version="0.31.0",features=["trace", "metrics"]} # 核心库
opentelemetry_sdk = "0.31.0"
# 选择相应的 Exporter，例如 Jaeger 或 Prometheus
opentelemetry-jaeger = "0.22.0" # Jaeger Exporter
opentelemetry-prometheus = "0.29.1" # Prometheus Exporter
opentelemetry-stdout = "0.31.0" # Stdout Exporter for tracing
hyper={version="1.8.1"}
http-body-util = "0.1.3"
hyper-util = { version = "0.1.19", features = ["full"] }
postgrest = "1.6.0"
[dev-dependencies]

mollusk-svm = { version = "0.8.1"}
solana-sdk = { version = "3.0.0"}
solana-program-runtime = { version = "3.0.0"}
